--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -119,7 +119,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=43.200 Y=22.400
-WindowSize=X=1437.600 Y=771.200
+WindowSize=X=1439.200 Y=772.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -148,7 +148,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/ToonTanks/Pawns
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Pawns
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1002,7 +1002,7 @@ Cascade.TimeStamp=2020.08.10-11.56.41
 Cascade.LastCompileMethod=External
 DistCurveEditor.TimeStamp=2020.08.10-11.58.34
 DistCurveEditor.LastCompileMethod=External
-ToonTanks.TimeStamp=2020.08.11-22.57.14
+ToonTanks.TimeStamp=2020.08.19-15.31.44
 ToonTanks.LastCompileMethod=Runtime
 BlueprintGraph.TimeStamp=2020.08.10-11.56.16
 BlueprintGraph.LastCompileMethod=Unknown
@@ -1395,6 +1395,50 @@ BP_PawnTank_C.Lag=True
 BP_PawnTank_C.PostProcess=True
 BP_PawnTank_C.HLOD=True
 BP_PawnTank_C.MaterialParameters=True
+BP_PawnTank_C.Movement=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+PawnTurret.TransformCommon=True
+PawnTurret.StaticMesh=True
+PawnTurret.Combat=True
+PawnTurret.Shape=True
+PawnTurret.Navigation=True
+PawnTurret.Physics=True
+PawnTurret.Collision=True
+PawnTurret.Lighting=True
+PawnTurret.Rendering=True
+PawnTurret.Tags=True
+PawnTurret.Cooking=True
+PawnTurret.VirtualTexture=True
+PawnTurret.Activation=True
+PawnTurret.Pawn=True
+PawnTurret.Camera=True
+PawnTurret.Replication=True
+PawnTurret.Input=True
+PawnTurret.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1402,6 +1446,7 @@ BP_PawnTank_C="\"Object.Components.CameraComp.Object.PostProcess.PostProcessSett
 PawnTank="\"Object.Components.CameraComp.Object.PostProcess.PostProcessSettings\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PawnBase="\"Object.Components.CameraComp.Object.PostProcess.PostProcessSettings\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Pawn="\"Object.Components.CameraComp.Object.PostProcess.PostProcessSettings\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PawnTurret="\"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
@@ -1506,5 +1551,6 @@ bHideUnrelatedNodes=False
 CapsuleComponent.Shape=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/ToonTanks.PawnTurret;
 RecentlyPlaced=/Game/Blueprints/Pawns/BP_PawnTank.BP_PawnTank;
 
